# webapp-example-journal

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  build_log.txt  pyproject.toml
.agent/rules/: python-uv.md  ui-frontend.md
.github/workflows/: docker-publish.yml
app/: __init__.py  main.py
app/api/: admin.py  auth.py  public.py  router.py  user.py
app/core/: config.py  security.py
app/models/: journal.py
app/services/: journal_service.py
frontend/app/: index.html  package-lock.json  package.json  vite.config.ts
frontend/app/src/: App.tsx
frontend/app/src/components/: Login.tsx
frontend/app/src/styles/: app.css
frontend/shared/: theme.css
frontend/web/: astro.config.mjs  package-lock.json  package.json
frontend/web/.astro/: data-store.json  settings.json
frontend/web/.astro/collections/: blog.schema.json
frontend/web/src/components/: BlogCard.astro  Footer.astro  Header.astro
frontend/web/src/content/: config.ts
frontend/web/src/content/blog/: benefits-journaling.md  getting-started.md  welcome.md
frontend/web/src/layouts/: BaseLayout.astro
frontend/web/src/pages/: index.astro  privacy.astro  terms.astro
frontend/web/src/pages/blog/: [slug].astro  index.astro
frontend/web/src/styles/: global.css
scripts/: start.ps1
specs/: api.md  architecture.md
