[project]
name = "journal-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.3",
    "fastapi>=0.110",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "pydantic-settings>=2.2",
    "PyJWT>=2.8",
    "uvicorn>=0.27",
]
